--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^3.7",
-        "phpunit/phpunit": "^7.4"
+        "phpunit/phpunit": "^7.4",
+        "scrutinizer/ocular": "^1.5"
     },
     "autoload": {
         "psr-4": {
