--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^7.1",
         "illuminate/support": "^5.7",
-        "nesbot/carbon": "^1.34"
+        "nesbot/carbon": "^1.34|^2.0"
     },
     "require-dev": {
         "myclabs/php-enum": "^1.6",
