--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,13 @@
     ],
     "require": {
         "php": "^7.2",
-        "illuminate/support": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
         "league/iso3166": "^2.1.5"
     },
     "require-dev": {
+        "laravel/legacy-factories": "dev-master",
         "myclabs/php-enum": "^1.6",
-        "orchestra/testbench": "^4.0|^5.0",
+        "orchestra/testbench": "^4.0|^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.0",
         "spatie/enum": "^2.2"
     },
