--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "laravel/legacy-factories": "^1.0.4",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^4.5|^5.0|^6.0",
-        "phpunit/phpunit": "^8.0|^9.0|^9.3",
+        "phpunit/phpunit": "^8.0|^9.3",
         "spatie/enum": "^2.2"
     },
     "autoload": {
