--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
-        "league/iso3166": "^2.1.5"
+        "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
@@ -37,6 +36,9 @@
         "psr-4": {
             "Spatie\\ValidationRules\\Tests\\": "tests"
         }
+    },
+    "suggest": {
+        "league/iso3166": "Needed for the CountryCode rule"
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
