Implement ISO4217 currency validation rule

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
+        "alcohol/iso4217": "^4.0",
         "illuminate/support": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
