--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     ],
     "require": {
         "php": "^7.3|^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0"
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
         "laravel/legacy-factories": "^1.0.4",
         "league/iso3166": "^3.0",
         "myclabs/php-enum": "^1.6",
-        "orchestra/testbench": "^4.5|^5.0|^6.0",
-        "phpunit/phpunit": "^9.3",
+        "orchestra/testbench": "^6.23",
+        "phpunit/phpunit": "^9.4",
         "spatie/enum": "^2.2|^3.0"
     },
     "autoload": {
