--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "illuminate/support": "^8.0|^9.0"
     },
     "require-dev": {
+        "laravel/pint": "^1.3",
         "league/iso3166": "^3.0",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^6.23|^7.0",
@@ -43,7 +44,8 @@
     "scripts": {
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
+        "format": "./vendor/bin/pint",
+        "inspect": "./vendor/bin/pint --test"
     },
     "config": {
         "sort-packages": true
