--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "league/iso3166": "^3.0",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^6.23|^7.0|^8.0",
-        "phpunit/phpunit": "^9.4",
+        "pestphp/pest": "^1.23",
         "spatie/enum": "^2.2|^3.0"
     },
     "autoload": {
@@ -48,7 +48,10 @@
         "inspect": "./vendor/bin/pint --test"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
