--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "league/iso3166": "^3.0",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^6.23|^7.0|^8.0",
-        "pestphp/pest": "^1.23",
+        "pestphp/pest": "^1.23|^2.6",
         "spatie/enum": "^2.2|^3.0"
     },
     "autoload": {
