--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0"
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "league/iso3166": "^4.3"
     },
     "require-dev": {
         "laravel/pint": "^1.3",
-        "league/iso3166": "^3.0|^4.3",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^6.23|^7.0|^8.0|^9.0|^10.0",
         "pestphp/pest": "^1.23|^2.6|^3.7",
