--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "league/iso3166": "^3.0|^4.3",
         "myclabs/php-enum": "^1.6",
         "orchestra/testbench": "^6.23|^7.0|^8.0|^9.0|^10.0|^11.0",
-        "pestphp/pest": "^1.23|^2.6|^3.7",
+        "pestphp/pest": "^1.23|^2.6|^3.7|^4.0",
         "spatie/enum": "^2.2|^3.0"
     },
     "autoload": {
